Fixing square bg alignment

--- a/summit/scss/general-events-landing-page.scss
+++ b/summit/scss/general-events-landing-page.scss
@@ -1741,15 +1741,15 @@ ul.navbar-main {
 }
 
 .all-summit .summits-wrap .video-container.first .video {
-    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE1-960X540.png) center top no-repeat;
+    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE1-960X540.png) center center no-repeat;
 }
 
 .all-summit .summits-wrap .video-container.second .video {
-    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE2-960X540.png) center top no-repeat;
+    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE2-960X540.png) center center no-repeat;
 }
 
 .all-summit .summits-wrap .video-container.last .video {
-    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE3-960X540.png) center top no-repeat;
+    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE3-960X540.png) center center no-repeat;
 }
 
 .all-summit .summits-wrap .timeline h3 {
